cleanup: enhance testing, logging and simplify building as this project is now focused on the core client library without a sample app